--- a/app/webroot/css/ie7.css
+++ b/app/webroot/css/ie7.css
@@ -6,24 +6,6 @@ tr.odd { background-color: rgba(143, 212, 105, 0.1)/*#f4fbf0*/; border: none; }
 tr.even { background-color: transparent;  }
 tr:hover { background-color: rgba(143, 212, 105, 0.25); }
 
-.main-menu li a:hover { background-color: rgba(255,255,255,0.5); text-decoration: none; }
-.main-menu li a:active { background-color: rgba(255,255,255,0.85); text-decoration: none; }
-
-input[type=submit],input[type=reset]{ border: 1px solid #4677a4; -moz-border-radius: 4px; -webkit-border-radius: 4px; -khtml-border-radius: 4px; border-radius: 4px; background: url(../img/bk-button.png) repeat-x #4a9dc0; color:#FFF; padding: 4px 30px; font-weight: bold; text-align: center !important; text-shadow: -1px -1px 1px rgba(0,0,0,0.2); box-shadow:inset 0 0 10px #000000; width: 210px; heigt: 40px; }
-
-.my-interests-grid li a:hover { background: url(../img/sprite-rebate-table.png) -4px -27px no-repeat rgba(143, 212, 105, 0.1); text-decoration: none; }
-.my-interests-grid li.active a{ background: url(../img/sprite-rebate-table.png) -4px -47px no-repeat; }
-.my-interests-grid li.active a:hover { background: url(../img/sprite-rebate-table.png) -4px -67px no-repeat rgba(143, 212, 105, 0.1); }
-
-ul.other-location-list.active { display: block; position: absolute; top: 31px; z-index: 100; width: 200px; list-style: none;  text-transform: capitalize; margin: 0; padding: 0; background-color: rgba(255,255,255,.92); border: 1px solid #ccc; box-shadow: 5px 5px 7px rgba(0,0,0,.35)  }
-.pending-quotes tr.odd { background-color: rgba(143, 212, 105, 0.1)/*#f4fbf0*/; border: none; }
-.pending-quotes tr:hover, .pending-quotes tr.odd:hover, .pending-quotes tr.even:hover { background-color: rgba(143, 212, 105, 0.25); } 
-.rebates-watch-list tr.even:hover { background-color:  rgba(143, 212, 105, 0.15); } 
-.rebate-content tr.odd { background-color: rgba(143, 212, 105, 0.1)/*#f4fbf0*/; border: none; }
-.rebate-content tr.even:hover { background-color: #fff /* rgba(143, 212, 105, 0.1)*/; } 
-.pending-quotes-content tr.odd { background-color: rgba(143, 212, 105, 0.1)/*#f4fbf0*/; border: none; }
-.pending-quotes-content tr.even:hover { background-color: #fff /* rgba(143, 212, 105, 0.1)*/; } 
-
 
 /* home page */
 .login-wrapper { position: absolute; right: 100px; height: 64px; }
