--- a/app/webroot/css/screen.css
+++ b/app/webroot/css/screen.css
@@ -467,7 +467,7 @@ ul.other-location-list { display: none  }
 ul.other-location-list.active { display: block; position: absolute; top: 31px; z-index: 100; width: 200px; list-style: none;  text-transform: capitalize; margin: 0; padding: 0; background-color: rgba(255,255,255,.92); border: 1px solid #ccc; box-shadow: 5px 5px 7px rgba(0,0,0,.35)  }
 ul.other-location-list li { padding: 3px 10px;  }
 ul.other-location-list li:hover { background-color: #4c96b6; color: white;  }
-ul.other-location-list li a:hover { color: white; text-decoration: none; }
+ul.other-location-list li:hover a { color: white; text-decoration: none; }
 table.current-equipment { width: 100%; padding: 0 0 15px; margin: 0 0 15px; background: url(/img/dotrule-orange-2px.png) bottom repeat-x; }
 table.current-equipment td { padding: 3px 10px; }
 .current-equipment-icon {float:left; background: url(/img/equipment-current-icon.png) no-repeat; width: 67px; height: 71px;margin-right: 10px;}
